2019-1/231/users/4210/executions/1651_1055.log
== TEST (2019-04-08 20:42:00) 
-- CODE:
from math import*
v0 = float(input())
x = radians(input("Insira um angulo em graus: "))
D = float(input("Insira a distancia: "))
g = 9.8
R = ((v0**2)*sin(2x))/g


if (D-1.< R < D+0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- ERROR:
File "XXXX", line 6
    R = ((v0**2)*sin(2x))/g
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:43:11) 
-- CODE:
from math import*
v0 = float(input())
x = input("Insira um angulo em graus: ")
radians(x)
D = float(input("Insira a distancia: "))
g = 9.8
R = ((v0**2)*sin(2x))/g


if (D-1.< R < D+0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- ERROR:
File "XXXX", line 7
    R = ((v0**2)*sin(2x))/g
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:44:10) 
-- CODE:
from math import*
v0 = float(input())
x = radians(float(input("Insira um angulo em graus: ")))
D = float(input("Insira a distancia: "))
g = 9.8
R = ((v0**2)*sin(2x))/g


if (D-1.< R < D+0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- ERROR:
File "XXXX", line 6
    R = ((v0**2)*sin(2x))/g
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:44:30) 
-- CODE:
from math import*
v0 = float(input())
x = radians(float(input("Insira um angulo em graus: ")))
D = float(input("Insira a distancia: "))
g = 9.8
R = ((v0**2)*sin(2*x))/g


if (D-1.< R < D+0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:45:12) 
-- CODE:
from math import*
v0 = float(input("Insira a velocidade: "))
x = radians(float(input("Insira um angulo em graus: ")))
D = float(input("Insira a distancia: "))
g = 9.8
R = ((v0**2)*sin(2*x))/g


if (D-1.< R < D+0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- EXECUTION TIME:
0.148361
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:46:27) 
-- CODE:
from math import*
v0 = float(input("Insira a velocidade: "))
x = radians(float(input("Insira um angulo em graus: ")))
D = float(input("Insira a distancia: "))
g = 9.8
R = ((v0**2)*sin(2*x))/g


if (D-0.1< R < D+0.1):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- EXECUTION TIME:
0.138328
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
